# Epic-Fighters-XD-standalone

./: CMakeLists.txt  CommonFunctions.cpp  CommonFunctions.h  Epic Fighters XD standalone.cpp  Epic Fighters XD standalone.sln  Epic Fighters XD standalone.vcxproj  Epic Fighters XD standalone.vcxproj.filters  GameState.cpp  GameState.h  MainMenu.cpp  MainMenu.h  Player.cpp  Player.h  make
.github/workflows/: c-cpp.yml
ARM/Release/: Epic Fighters XD standalone.recipe
ARM/Release/Epic Fig.1b3508cd.tlog/: Epic Fighters XD standalone.lastbuildstate
Assets/ASCII/: XDDraw++.txt  XDDraw.txt  XDEnemyDodge++.txt  XDEnemyDodge.txt  XDEnemyKick++.txt  XDEnemyKick.txt  XDEnemyPunch++.txt  XDEnemyPunch.txt  XDGameOver++.txt  XDGameOver.txt  XDLose++.txt  XDLose.txt  XDPlayerDodge++.txt  XDPlayerDodge.txt  XDPlayerKick++.txt  XDPlayerKick.txt  XDPlayerPunch++.txt  XDPlayerPunch.txt  XDStart++.txt  XDStart.txt  XDTITLE++.txt  XDWin++.txt  XDWin.txt  XDidle++.txt  XDidle.txt
Debug/: Epic Fighters XD standalone.exe.recipe  Epic Fighters XD standalone.ilk  Epic Fighters XD standalone.vcxproj.FileListAbsolute.txt  player.obj.enc  vc142.idb  vc143.idb
Debug/Epic Fig.1b3508cd.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Epic Fighters XD standalone.lastbuildstate  link.command.1.tlog  link.delete.1.tlog  link.read.1.tlog  link.write.1.tlog
